<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="4dp"
    android:layout_marginStart="@dimen/margin_normal"
    android:layout_marginTop="@dimen/margin_normal"
    android:layout_marginEnd="@dimen/margin_normal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_normal"
        android:orientation="vertical" >


        <TextView
            android:id="@+id/location"
            style="@style/TextAppearance.Divoc.CardHeadline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            android:textColor="?android:textColorSecondary"
            tools:text="Jharkhand" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_normal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/confirmed"
                style="@style/TextAppearance.Divoc.CollapsingHeader.Label"
                android:layout_width="0dp"
                android:textAllCaps="true"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="?android:textColorSecondary"
                tools:text="@string/confirmed_header" />

            <TextView
                android:id="@+id/recovered"
                style="@style/TextAppearance.Divoc.CollapsingHeader.Label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAllCaps="true"
                android:layout_weight="1"
                android:textColor="@color/android_green"
                tools:text="@string/recovered_header" />

            <TextView
                android:id="@+id/deaths"
                style="@style/TextAppearance.Divoc.CollapsingHeader.Label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAllCaps="true"
                android:layout_weight="1"
                android:textColor="@color/red"
                tools:text="@string/deaths_header" />
        </LinearLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>