<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipeContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".overview.OverviewFragment">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/appBar"
            style="@style/Widget.Divoc.Toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent" />


        <include
            layout="@layout/shimmer_overview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/appBar" />

        <LinearLayout
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/appBar">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/update_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_normal"
                android:layout_marginTop="@dimen/margin_large"
                android:layout_marginEnd="@dimen/margin_normal"
                app:cardElevation="2dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/TextAppearance.Divoc.CardHeadline"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_normal"
                        android:layout_marginTop="@dimen/margin_normal"
                        android:layout_marginEnd="@dimen/margin_normal"
                        android:text="Last updated on"
                        android:textColor="@color/android_blue_pastel" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/updated_at"
                        style="@style/TextAppearance.Divoc.SessionTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin_normal"
                        android:textColor="@color/android_blue_pastel"
                        tools:text="@string/updated_at" />
                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/confirmed_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_normal"
                android:layout_marginTop="@dimen/margin_normal"
                android:layout_marginEnd="@dimen/margin_normal"
                app:cardElevation="2dp">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <androidx.appcompat.widget.AppCompatTextView
                            style="@style/TextAppearance.Divoc.CardHeadline"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/margin_normal"
                            android:layout_marginTop="@dimen/margin_normal"
                            android:layout_marginEnd="@dimen/margin_normal"
                            android:text="@string/confirmed" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/confirmed_textview"
                            style="@style/TextAppearance.Divoc.CardBody"
                            android:layout_width="match_parent"
                            android:layout_height="85dp"
                            android:layout_marginStart="@dimen/margin_normal"
                            android:layout_marginTop="@dimen/margin_small"
                            android:layout_marginEnd="@dimen/margin_normal"
                            android:layout_marginBottom="@dimen/margin_large"
                            android:fontFamily="@font/oswald_bold"
                            android:textAlignment="center"
                            app:autoSizeTextType="uniform"
                            tools:text="100,200,000" />
                    </LinearLayout>

                    <com.github.mikephil.charting.charts.LineChart
                        android:id="@+id/confirmed_chart"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="bottom"
                        android:layout_margin="@dimen/margin_normal"
                        android:visibility="invisible" />

                </FrameLayout>


            </com.google.android.material.card.MaterialCardView>

            <LinearLayout
                android:id="@+id/second_row"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/confirmed_card">


                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/card_death"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_normal"
                    android:layout_marginTop="@dimen/margin_normal"
                    android:layout_marginEnd="@dimen/margin_normal"
                    android:layout_marginBottom="@dimen/margin_normal"
                    android:layout_weight="1"
                    app:cardElevation="2dp">

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <androidx.appcompat.widget.AppCompatTextView
                                style="@style/TextAppearance.Divoc.CardHeadline"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="@dimen/margin_normal"
                                android:layout_marginTop="@dimen/margin_normal"
                                android:layout_marginEnd="@dimen/margin_normal"
                                android:text="@string/death"
                                android:textColor="@color/red" />

                            <androidx.appcompat.widget.AppCompatTextView
                                android:id="@+id/deaths_textview"
                                style="@style/TextAppearance.Divoc.CardBody"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="@dimen/margin_normal"
                                android:layout_marginTop="@dimen/margin_small"
                                android:layout_marginEnd="@dimen/margin_normal"
                                android:layout_marginBottom="@dimen/margin_large"
                                android:fontFamily="@font/oswald_bold"
                                android:textAlignment="center"
                                android:textColor="@color/red"
                                app:autoSizeTextType="uniform"
                                tools:text="12,780" />
                        </LinearLayout>

                        <com.github.mikephil.charting.charts.LineChart
                            android:id="@+id/deaths_chart"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="bottom"
                            android:layout_margin="@dimen/margin_normal"
                            android:visibility="invisible" />
                    </FrameLayout>
                </com.google.android.material.card.MaterialCardView>
            </LinearLayout>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/locale_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_normal"
                android:layout_marginEnd="@dimen/margin_normal"
                app:cardElevation="2dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/country_stat_label"
                        style="@style/TextAppearance.Divoc.SessionTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin_normal"
                        android:text="@string/see_your_country_s_stats"
                        android:textColor="@color/ads_light_green" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/country_flag"
                        style="@style/TextAppearance.Divoc.FlagH5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_normal"
                        android:layout_marginEnd="@dimen/margin_normal"
                        android:layout_marginBottom="@dimen/margin_normal"
                        android:textColor="@color/android_blue_pastel"
                        tools:text="🇮🇳" />


                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>


        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>